Fluent: increase send box text size to prevent unwanted zoom on mobile (#5192)
* Fluent: increase focused send box text size to prevent unwanted zoom on mobile

* Self review

* Changelog

--- a/packages/fluent-theme/src/components/sendBox/SendBox.module.css
+++ b/packages/fluent-theme/src/components/sendBox/SendBox.module.css
@@ -79,6 +79,13 @@
   outline: none;
   padding: 4px 4px 0;
   resize: none;
+
+  /* Prevent zoom on focus on iOS */
+  @media only screen and (hover: none) and (pointer: coarse) {
+    &:focus-within {
+      font-size: 16px;
+    }
+  }
 }
 
 :global(.webchat-fluent) .sendbox__sendbox-controls {
